--- a/spring-time-web/src/main/webapp/app/partials/dashboard.html
+++ b/spring-time-web/src/main/webapp/app/partials/dashboard.html
@@ -1,10 +1,7 @@
-<div>
-    Hello {{currentUser.user.loginId}} </br>
-    Current userData: {{currentUser | json}}
-    
+<div>    
     <h2>Userdata</h2>
     <table>
-        <thead><tr><td>key</td><td>value</td></tr></thead>
+        <thead><tr><th>key</th><th>value</th></tr></thead>
         <tbody>
             <tr>
                 <td>email</td>
@@ -26,6 +23,29 @@
                 <td>familyName</td>
                 <td>{{currentUser.user.familyName}}</td>
             </tr>
+        </tbody>
+    </table>
+    <h2>TimesheetData</h2>
+    <table>
+        <thead><tr><th>key</th><th>value</th></tr></thead>
+        <tbody>
+            <tr>
+                <td>timesheetId</td>
+                <td>{{timesheet.timesheetId.uuId}}</td>
+            </tr>
+             <tr>
+                <td>saldogleitzeit</td>
+                <td>{{timesheet.saldoGleitzeit | addHourSymbol}}</td>
+            </tr>
+             <tr>
+                <td>pensum</td>
+                <td>{{timesheet.pensum | doubleToPercentage}}</td>
+            </tr>
+             <tr>
+                <td>dateOfJoiningTheCompany</td>
+                <td>{{timesheet.dateOfJoiningTheCompany | date:'shortDate'}}</td>
+            </tr>
+            
         </tbody>
     </table>
 </div>
