--- a/spring-time-web/src/main/webapp/app/partials/dashboard.html
+++ b/spring-time-web/src/main/webapp/app/partials/dashboard.html
@@ -1,6 +1,6 @@
 <div>    
     <h2>Userdata</h2>
-    <table>
+    <table  class="table table-condensed">
         <thead><tr><th>key</th><th>value</th></tr></thead>
         <tbody>
             <tr>
@@ -26,7 +26,7 @@
         </tbody>
     </table>
     <h2>TimesheetData</h2>
-    <table>
+    <table class="table table-striped table-bordered table-hover">
         <thead><tr><th>key</th><th>value</th></tr></thead>
         <tbody>
             <tr>
